# picobot

./: .gitignore  Cargo.toml  README.md
src/: latex.rs  main.rs  quotes.rs  xkcd.rs
