[package]
name = "picovm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
matrix-sdk = "0.10.0"
mime = "0.3.17"
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.19"
